Added recipes and linked them to the main page
Three recipes have been added on their respective pages, as well as a direct link back to the main page.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <br>
+    <ul>
+        <li><a href="./recipes/spaghetti_al_limone.html">Spaghetti al Limone</a></li>
+        <li><a href="./recipes/roasted_vegetables.html">Roasted Vegetables</a></li>
+        <li><a href="./recipes/veggie_burger.html">Veggie Burger</a></li>
+    </ul>
 </body>
 
 </html>
