--- a/recipes/spaghetti_al_limone.html
+++ b/recipes/spaghetti_al_limone.html
@@ -11,7 +11,7 @@
     <h2><p>Spaghetti al Limone: a beautiful, refreshing recipe for (not only) the summertime!</p></h2>
     <h3><p>Ingredients</p></h3>
     <ul>
-        <li>500g spghaetti or more, depending on appetite</li>
+        <li>500g spaghetti or more, depending on appetite</li>
         <li>5 slices of preserved lemon or zest of 1 organic lemon</li>
         <li>Juice of 1 lemon</li>
         <li>80g Parmesan cheese</li>
@@ -21,9 +21,10 @@
         <li>1 handful of arugula leaves</li>
         <li>2tbsp extra fine olive oil</li>
         <li>Salt to taste</li>   
+        <link rel="stylesheet" href="../style.css">
     </ul>
 
-    <h3>Instructions</h3>
+    <h3>Steps</h3>
     <ol>
         <li>As always, the sauce should wait for the pasta. However, since the sauce is so quick to make, we'll start with the pasta. So: bring a large pot of water (at least 4 liters) to a boil.</li>
         <li>Then, add a handful of salt. The water should be as salty as the sea in summer.</li>
