--- a/recipes/roasted_vegetables.html
+++ b/recipes/roasted_vegetables.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roasted Vegetables</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Roasted Vegetables</h1>
