--- a/recipes/veggie_burger.html
+++ b/recipes/veggie_burger.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veggie Burger</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Veggie Burger</h1>
@@ -11,19 +12,19 @@
     <h2><p>A lazy sunday feast: Burger!</p></h2>
     <h3><p>Ingredients</p></h3>
     <ul>
-        <li>Vegetables of your liking (e.g. tomato, lettuce)</li>
-        <li>4 burger buns</li>
-        <li>2 vegan burger patties of your choice</li>
-        <li>3-4 tbsp vegan BBQ sauce</li>
+        <li id="list">Vegetables of your liking (e.g. tomato, lettuce)</li>
+        <li id="list">4 burger buns</li>
+        <li id="list">2 vegan burger patties of your choice</li>
+        <li id="list">3-4 tbsp vegan BBQ sauce</li>
     </ul>
 
     <h3>Steps</h3>
     <ol>
-        <li>Heat 1 tbsp of oil in a skillet or non-stick pan over medium heat.</li>
-        <li>Cook the burger patties until they get brown and crispy on the outside.</li>
-        <li>Brush half of the BBQ sauce onto the patties and let them caramelize.</li>
-        <li>Assemble your burger patties with the vegetables of your choice.</li>
-        <li>Add the hot burger patties and serve immediately.</li>
+        <li id="list">Heat 1 tbsp of oil in a skillet or non-stick pan over medium heat.</li>
+        <li id="list">Cook the burger patties until they get brown and crispy on the outside.</li>
+        <li id="list">Brush half of the BBQ sauce onto the patties and let them caramelize.</li>
+        <li id="list">Assemble your burger patties with the vegetables of your choice.</li>
+        <li id="list">Add the hot burger patties and serve immediately.</li>
     </ol>
     <p><a href="../index.html">Home</a></p>
 </body>
